Faz 3 tam kitap dönüşümü (11 topic + mini proje, tek geçiş)
- Concurrency & JVM: pedagojik yazım, 45 diyagram, 66 kutu, 84 soru, kod parçalama+katlama, vurgu
- Faz kapağı + PHASE_TEST kitap formatında
- 12 paralel agent; QA temiz

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>